sonar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-dev-deployment
  namespace: jenkins
  labels:
    app: sonar-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar-dev
  template:
    metadata:
      name: sonar-dev-replicaset
      labels:
        app: sonar-dev
    spec:
      hostAliases:
      - ip: "172.18.255.200"
        hostnames:
        - "sonar-dev.ttechcloud.com"
        - "jenkins-dev.ttechcloud.com"
      containers:
        - name: sonar-dev-pod
          image: ttechcloud/sonar-lts:1.0.0
          # env:
          #   - name: https_proxy
          #     value: "http://10.104.244.78:8080"
          #   - name: http_proxy
          #     value: "http://10.104.244.78:8080"  
          ports:
          -  name: sonar-port
             containerPort: 9000
          # volumeMounts:
          # - name: sonar-volume
          #   mountPath: /opt/sonarqube
          resources:
            requests:
              memory: "2Gi"
              cpu: "1.5"
            limits:
              memory: "3Gi"
              cpu: "2.0"
          livenessProbe:
            httpGet:
              path: "/sessions/new"
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/sessions/new"
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      # volumes:
      #   - name: sonar-volume
      #     persistentVolumeClaim:
      #       claimName: sonar-volv-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-dev-service
  namespace: jenkins
  labels:
    app: sonar-dev
spec:
  type: NodePort
  ports:
    - name: sonar-web
      port: 9000
      targetPort: 9000
      nodePort: 30090
  selector:
    app: sonar-dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: jenkins
spec:
  rules:
  - host: sonar-dev.ttechcloud.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonar-dev-service
            port:
              number: 9000
